[#22] add integration-tests for finish-server.